module/openapi-annotations/src/test/resources/net/jacobpeterson/jet/openapiannotations/blackboxtest/toplevel/fail/duplicateannotations/Test.java
import net.jacobpeterson.jet.openapiannotations.annotation.OpenApi;

@OpenApi()
@OpenApi()
public final class Test {}
